@@ -33,6 +33,10 @@ public class CommentTool extends BaseTool {
     public CommentTool(ERDesignerGraph aGraph) {
         super(aGraph);
     }
+    
+    public boolean isForceMarqueeEvent(MouseEvent event) {
+        return true;
+    }       
 
     @Override
     public void mousePressed(MouseEvent e) {
