@@ -31,6 +31,10 @@ public class ViewTool extends BaseTool {
     public ViewTool(ERDesignerGraph aGraph) {
         super(aGraph);
     }
+    
+    public boolean isForceMarqueeEvent(MouseEvent event) {
+        return true;
+    }       
 
     @Override
     public void mousePressed(MouseEvent e) {
